--- a/landing_page.html
+++ b/landing_page.html
@@ -13,7 +13,7 @@
             <div class="header display_flex">
                 <div><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></div>
                 <div>Product</div>
-                <div>Pricing</div>
+                <div><a href="pricing.html">Pricing</a></div>
                 <div>Solutions</div>
                 <div>Customers</div>
                 <div>Resources</div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="display_flex learn_more">
-                    <p>Learn more</p>
+                    <a href="learn-more.html"><p>Learn more</p></a>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="display_flex learn_more">
-                    <p>Learn more</p>
+                    <a href="learn-more.html"><p>Learn more</p></a>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="display_flex learn_more">
-                    <p>Learn more</p>
+                    <a href="learn-more.html"><p>Learn more</p></a>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                     </div>
                     <p class="text_det_col">Handle quotes, approvals, acceptance, and collections seamlessly from within the CRM.</p>
                     <div class="display_flex learn_more learn_details">
-                        <p>Learn more</p>
+                        <a href="learn-more.html"><p>Learn more</p></a>
                         <i class="fi-rr-arrow-small-right"></i>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     </div>
                     <p class="text_det_col">Accept payments across a wide array of gateways, geographies, and currencies.</p>
                     <div class="display_flex learn_more learn_details">
-                        <p>Learn more</p>
+                        <a href="learn-more.html"><p>Learn more</p></a>
                         <i class="fi-rr-arrow-small-right"></i>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                 </div>
                 <p class="text_det_col">Reconcile books in seconds, handle compliance, and recognize revenue painlessly.</p>
                 <div class="display_flex learn_more learn_details">
-                    <p>Learn more</p>
+                    <a href="learn-more.html"><p>Learn more</p></a>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
             </div>
