--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@
     <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
         href="https://www.chargebee.com/static/resources/brand/favicon.png">
 
-    <link rel="stylesheet" href="C:\Users\prade\Google Drive\A Masai\Pricing\pricing.css">
+    <link rel="stylesheet" href="pricing.css">
     <script src="C:\Users\prade\Google Drive\A Masai\Pricing\pricing.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
