--- a/landing_page.html
+++ b/landing_page.html
@@ -209,10 +209,10 @@
                 </div>
             </div>
             <div class="color_base display_flex">
-                <div class="tell">
+                <div class="talk">
                     <p>Talk to us today about your revenue workflow</p>
                 </div>
-                <div class="display_flex schedule schedule_purple sch_base">
+                <div class="display_flex schedule head_sch">
                     <p>Schedule a Demo</p>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
@@ -232,7 +232,7 @@
         </div>
         <div class="display_flex bottom_head">
             <h5>Still unsure? Step Inside and See What The Future Looks Like.</h5>
-            <div class="display_flex schedule schedule_purple sch_base head_sch">
+            <div class="display_flex schedule head_sch">
                 <p>Schedule a Demo</p>
                 <i class="fi-rr-angle-small-right"></i>
             </div>
