Added footer services

--- a/landing_page.html
+++ b/landing_page.html
@@ -241,7 +241,7 @@
         <div class="comp_services display_flex">
             <div>
                 <div class="display_flex">
-                    <h4>Product</h4>
+                    <p>Product</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
                 <div>Subscription Management</div>
@@ -254,7 +254,7 @@
             </div>
             <div>
                 <div class="display_flex">
-                    <h4>Help & Support</h4>
+                    <p>Help & Support</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
                 <div>Security</div>
@@ -267,7 +267,7 @@
             </div>
             <div>
                 <div class="display_flex">
-                    <h4>Resources</h4>
+                    <p>Resources</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
                 <div>Blog</div>
@@ -279,7 +279,7 @@
             </div>
             <div>
                 <div class="display_flex">
-                    <h4>Company</h4>
+                    <p>Company</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
                 <div>Customers</div>
