customer review added

--- a/landing_page.html
+++ b/landing_page.html
@@ -230,6 +230,74 @@
                 </div>
             </div>
         </div>
+        <div class="reviews">
+            <div id="rethink_pricing" class="display_flex review">
+                <div class="review_read">
+                    <p>Achieved</p>
+                    <img src="https://webstatic.chargebee.com/assets/web/352/images/home/testimonial/lemon/drawboard-20x.svg" />
+                    <p>ROI with Chargebee</p>
+                    <div class="display_flex ">
+                        <div class="read_line"></div>
+                        <div class="display_flex read_story">
+                            <p>Read Story</p>
+                            <i class="fi-rr-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review_txt">
+                    <p>“Chargebee has all the concepts of metered billing, flat and tiered pricing. If we decided to change the way we want to bill or the price structure, it would be accounted for, excuse the pun.”</p>
+                    <h4>Nathan Field</h4>
+                    <p>Marketing</p>
+                    <div>
+                        <img src="https://webstatic.chargebee.com/assets/web/352/images/case-study/drawboard/logo.svg" />
+                    </div>
+                </div>
+            </div>
+            <div id="automate_finops" class="display_flex review">
+                <div class="review_read txt_ayush">
+                    <p>Saved</p>
+                    <img src="https://webstatic.chargebee.com/assets/web/352/images/home/testimonial/lemon/fishburners-105.svg" />
+                    <p>in manual accounting.</p>
+                    <div class="display_flex ">
+                        <div class="read_line"></div>
+                        <div class="display_flex read_story">
+                            <p>Read Story</p>
+                            <i class="fi-rr-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review_txt">
+                    <p>“Our finance and accounting teams now save up to 105 hours of manual accounting every month. We now have more time to do financial analysis and make strategic business decisions.”</p>
+                    <h4>Ayush Patel</h4>
+                    <p>Finance</p>
+                    <div>
+                        <img src="https://webstatic.chargebee.com/assets/web/352/images/customers/logos/fishburners.png" />
+                    </div>
+                </div>
+            </div>
+            <div id="go_global" class="display_flex review">
+                <div class="review_read txt_val">
+                    <p>Grew MRR by</p>
+                    <img src="https://webstatic.chargebee.com/assets/web/352/images/home/testimonial/lemon/harvestr-15percent.svg" />
+                    <p>and Extended Globally From Europe.</p>
+                    <div class="display_flex ">
+                        <div class="read_line"></div>
+                        <div class="display_flex read_story">
+                            <p>Read Story</p>
+                            <i class="fi-rr-arrow-right"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="review_txt">
+                    <p>“As a European company selling in Europe but also outside of Europe, it was critical for us to be able to have two currencies - euros and dollars. VAT was another aspect we really wanted to be automated. This was a gamechanger with Chargebee. ”</p>
+                    <h4>Valentin Huang</h4>
+                    <p>Co-founder</p>
+                    <div>
+                        <img src="https://webstatic.chargebee.com/assets/web/352/images/case-study/harvestr/logo.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="display_flex bottom_head">
             <h5>Still unsure? Step Inside and See What The Future Looks Like.</h5>
             <div class="display_flex schedule head_sch">
