added inclination to blue area at top and bottom

--- a/landing_page.html
+++ b/landing_page.html
@@ -154,7 +154,13 @@
                 <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/revenue-operations-graphic.svg" />
             </div>
         </div>
-        <div class="back_blue">
+        <div id="purple_main">
+            <div id="slant_purple_top"></div>
+            <div id="slant_blue_top"></div>
+            <div id="slant_purple_bottom"></div>
+            <div id="slant_blue_bottom"></div>
+            <div>
+                <div class="back_blue">
             <div class="title">
                 <div class="heading">
                     <h1>Works With Your</h1>
@@ -228,6 +234,8 @@
                 <div class="under_line">
                     <div></div>
                 </div>
+            </div>
+        </div>
             </div>
         </div>
         <div class="reviews">
