few chsnges in dimnensions, updated js file

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,149 +9,149 @@
         <title>Subscription Management</title>
     </head>
     <body>
-        <div class="color_back">
-            <div class="header display_flex">
-                <div><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></div>
-                <div>Product</div>
-                <div><a href="pricing.html">Pricing</a></div>
-                <div>Solutions</div>
-                <div>Customers</div>
-                <div>Resources</div>
-                <div class="login_demo display_flex">
-                    <div class="display_flex schedule schedule_orange">
-                        <p class="demo">Schedule a Demo</p>
-                        <i class="fi-rr-angle-small-right demo"></i>
-                    </div>
-                    <div class="display_flex">
-                        <div><i class="fi-sr-lock"></i></div>
-                        <div>Login</div>
-                        <div><i class="fi-rr-angle-small-right"></i></div>
-                    </div>
+        <div class="header display_flex">
+            <div><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></div>
+            <div>Product</div>
+            <div><a href="pricing.html">Pricing</a></div>
+            <div>Solutions</div>
+            <div>Customers</div>
+            <div>Resources</div>
+            <div class="login_demo display_flex">
+                <div class="display_flex schedule schedule_orange">
+                    <p class="demo">Schedule a Demo</p>
+                    <i class="fi-rr-angle-small-right demo"></i>
+                </div>
+                <div class="display_flex">
+                    <div><i class="fi-sr-lock"></i></div>
+                    <div>Login</div>
+                    <div><i class="fi-rr-angle-small-right"></i></div>
                 </div>
             </div>
-            <div class="colored_sub">
-                <h5>Subscription Billing & Revenue Operations</h5>
-                <h5>for Fast-growth B2B SaaS</h5>
-                <p>Get the operational sophistication to achieve, sustain,</p>
-                <p>and scale recurring revenue.</p>
-                <div class="sch_signup_btn display_flex">
-                    <div class="display_flex schedule schedule_purple">
-                        <p>Schedule a Demo</p>
+        </div>
+        <div class="colored_sub">
+            <h5>Subscription Billing & Revenue Operations</h5>
+            <h5>for Fast-growth B2B SaaS</h5>
+            <p>Get the operational sophistication to achieve, sustain,</p>
+            <p>and scale recurring revenue.</p>
+            <div class="sch_signup_btn display_flex">
+                <div class="display_flex schedule schedule_purple">
+                    <p>Schedule a Demo</p>
+                    <i class="fi-rr-arrow-small-right"></i>
+                </div>
+                <div class="display_flex">
+                    <p>Sign up for free</p>
+                    <i class="fi-rr-arrow-small-right sign_i"></i>
+                </div>
+            </div>
+        </div>
+        <div id="data_analysis">
+            <div class="automate display_grid">
+                <div class="automate_text">
+                    <p>No more spreadsheet errors</p>
+                    <h5>Automate Recurring Billing</h5>
+                    <p>Scale your SaaS through 480+ recurring billing scenarios that automate who you bill, when, and how. No humans, no spreadsheets, no missed payments!</p>
+                    <div class="display_flex">
+                        <div class="automate_content display_flex">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Billing Schedules</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Tax management</p>
+                            </div>
+                        </div>
+                        <div class="automate_content display_flex check_right">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Proration & Invoicing</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Payment Methods</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="display_flex learn_more">
+                        <a href="learn-more.html"><p>Learn more</p></a>
                         <i class="fi-rr-arrow-small-right"></i>
                     </div>
+                </div>
+                <div class="automate_img">
+                    <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/recurring-billing-graphic.svg" />
+                </div>
+            </div>
+            <div class="automate smarter display_grid">
+                <div class="automate_img smarter_img">
+                    <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/subscription-graphic.svg" />
+                </div>
+                <div class="automate_text smarter_text">
+                    <p>No more developer dependency</p>
+                    <h5>Smarter Subscription Management</h5>
+                    <p>Experiment rapidly with pricing structures, product catalogs, and subscription lifecycles with a business-user-first experience.</p>
                     <div class="display_flex">
-                        <p>Sign up for free</p>
-                        <i class="fi-rr-arrow-small-right sign_i"></i>
+                        <div class="automate_content display_flex">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Price modeling</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Trial management</p>
+                            </div>
+                        </div>
+                        <div class="automate_content display_flex check_right">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Product Catalog</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Lifecycle automation</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="display_flex learn_more">
+                        <a href="learn-more.html"><p>Learn more</p></a>
+                        <i class="fi-rr-arrow-small-right"></i>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="automate display_grid">
-            <div class="automate_text">
-                <p>No more spreadsheet errors</p>
-                <h5>Automate Recurring Billing</h5>
-                <p>Scale your SaaS through 480+ recurring billing scenarios that automate who you bill, when, and how. No humans, no spreadsheets, no missed payments!</p>
-                <div class="display_flex">
-                    <div class="automate_content display_flex">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Billing Schedules</p>
+            <div class="automate display_grid SAAS">
+                <div class="automate_text">
+                    <p>No more lost opportunities</p>
+                    <h5>Streamline Revenue Operations</h5>
+                    <p>Plug revenue leaks by aligning GTM & Finance. Uncover growth opportunities across processes, geographies, and business models.</p>
+                    <div class="display_flex">
+                        <div class="automate_content display_flex">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>SaaS Analytics</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Order-to-revenue</p>
+                            </div>
                         </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Tax management</p>
-                        </div>
-                    </div>
-                    <div class="automate_content display_flex check_right">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Proration & Invoicing</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Payment Methods</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="display_flex learn_more">
-                    <a href="learn-more.html"><p>Learn more</p></a>
-                    <i class="fi-rr-arrow-small-right"></i>
-                </div>
-            </div>
-            <div class="automate_img">
-                <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/recurring-billing-graphic.svg" />
-            </div>
-        </div>
-        <div class="automate smarter display_grid">
-            <div class="automate_img smarter_img">
-                <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/subscription-graphic.svg" />
-            </div>
-            <div class="automate_text smarter_text">
-                <p>No more developer dependency</p>
-                <h5>Smarter Subscription Management</h5>
-                <p>Experiment rapidly with pricing structures, product catalogs, and subscription lifecycles with a business-user-first experience.</p>
-                <div class="display_flex">
-                    <div class="automate_content display_flex">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Price modeling</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Trial management</p>
+                        <div class="automate_content display_flex check_right">
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Quote-to-cash</p>
+                            </div>
+                            <div class="check_box">
+                                <i class="fi-rr-check"></i>
+                                <p>Revenue Recognition</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="automate_content display_flex check_right">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Product Catalog</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Lifecycle automation</p>
-                        </div>
+                    <div class="display_flex learn_more">
+                        <a href="learn-more.html"><p>Learn more</p></a>
+                        <i class="fi-rr-arrow-small-right"></i>
                     </div>
                 </div>
-                <div class="display_flex learn_more">
-                    <a href="learn-more.html"><p>Learn more</p></a>
-                    <i class="fi-rr-arrow-small-right"></i>
+                <div class="automate_img">
+                    <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/revenue-operations-graphic.svg" />
                 </div>
-            </div>
-        </div>
-        <div class="automate display_grid">
-            <div class="automate_text">
-                <p>No more lost opportunities</p>
-                <h5>Streamline Revenue Operations</h5>
-                <p>Plug revenue leaks by aligning GTM & Finance. Uncover growth opportunities across processes, geographies, and business models.</p>
-                <div class="display_flex">
-                    <div class="automate_content display_flex">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>SaaS Analytics</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Order-to-revenue</p>
-                        </div>
-                    </div>
-                    <div class="automate_content display_flex check_right">
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Quote-to-cash</p>
-                        </div>
-                        <div class="check_box">
-                            <i class="fi-rr-check"></i>
-                            <p>Revenue Recognition</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="display_flex learn_more">
-                    <a href="learn-more.html"><p>Learn more</p></a>
-                    <i class="fi-rr-arrow-small-right"></i>
-                </div>
-            </div>
-            <div class="automate_img">
-                <img src = "https://webstatic.chargebee.com/assets/web/352/images/home/lemon/revenue-operations-graphic.svg" />
             </div>
         </div>
         <div id="purple_main">
@@ -228,9 +228,9 @@
                 <h4>Great Products Deserve Hyper Growth. Chargebee Makes it Easy.</h4>
             </div>
             <div class="options">
-                <div>Rethink Pricing</div>
-                <div>Automate finOps</div>
-                <div>Go Global</div>
+                <div id="rethink_btn">Rethink Pricing</div>
+                <div id="automate_btn">Automate finOps</div>
+                <div id="global_btn">Go Global</div>
                 <div class="under_line">
                     <div></div>
                 </div>
@@ -238,7 +238,7 @@
         </div>
             </div>
         </div>
-        <div class="reviews">
+        <div id="reviews">
             <div id="rethink_pricing" class="display_flex review">
                 <div class="review_read">
                     <p>Achieved</p>
@@ -377,5 +377,6 @@
                 <img class="social_logo" src="https://i.pinimg.com/564x/b7/63/69/b763699fd1fa3bfb374442593ae642e1.jpg" />
             </div>
         </div>
+        <script src = "learn-more.js"></script>
     </body>
 </html>
