footer part completed with basic animations uisng js, border removal pending

--- a/learn-more.html
+++ b/learn-more.html
@@ -59,13 +59,51 @@
                 </div>
                 <div><hr/></div>
                 <div id = "company_centric_details">
-                    <div><p class = "company_features_header">Product<i class = "arrow_line"></i><i class="arrow right"></i></p></div>
-                    <div><p class = "company_features_header">Help and Support<i class="arrow right"></i></p></div>
-                    <div><p class = "company_features_header">Resources<i class="arrow right"></i></p></div>
-                    <div><p class = "company_features_header">Company<i class="arrow right"></i></p></div>
+                    <div>
+                        <a id = "product" href = "https://www.chargebee.com/features/" class = "company_features_header" >Product<i class = "arrow_right arrow_right_1"></i></a>
+                        <br/><br/><a class = "sub_headers" href = "https://www.chargebee.com/subscription-management/">Subscription Management</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/recurring-billing-invoicing/">Recurring Billing and Invoicing</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/recurring-payments/">Recurring Payments</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/saas-accounting-and-taxes/">Accounting and Taxes</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/saas-reporting/">SaaS Reporting</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/enterprise-subscription-billing/">Enterprise Billing</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/integrations/">Integrations</a><br/>
+                    </div>
+                    <div>
+                        <a id = "help" href = "https://www.chargebee.com/help/" class = "company_features_header">Help and Support<i class="arrow_right arrow_right_2"></i></a>
+                        <br/><br/><a class="sub_headers" href = "https://www.chargebee.com/security/"> Security</a><br/>       
+                        <br/><a class="sub_headers" href = "https://www.chargebee.com/faq/">FAQs</a><br/>
+                        <br/><a class="sub_headers" href = "http://status.chargebee.com/">Status</a><br/>
+                        <br/><a class="sub_headers" href = "https://www.chargebee.com/docs/">Product Documentation</a><br/>
+                        <br/><a class="sub_headers" href = "https://apidocs.chargebee.com/docs/api">API Documentation</a><br/>
+                        <br/><a class="sub_headers" href = "https://www.chargebee.com/payment-gateways/">Supported Payment Gateways</a><br/>
+                        <br/><a class="sub_headers" href = "https://www.chargebee.com/sitemap/">Sitemap</a><br/>
+                    </div>
+                    <div>
+                        <a id = "resources" href = "https://www.chargebee.com/resources/" class = "company_features_header">Resources<i class="arrow_right arrow_right_3"></i></a>
+                        <br/><br/><a class = "sub_headers" href = "https://www.chargebee.com/blog/">Blog</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/resources/tools/compare-payment-gateway-providers/">Compare Payment Gateways</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/resources/guides/involuntary-churn-payment-failed/">Tackling Payment Failures</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/resources/guides/subscription-billing-and-management-guide/">Enterprise Billing Guide</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/webinars/">Webinars</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/resources/glossaries/">Glossaries</a><br/>
+                    </div>
+                    <div>
+                        <a id = "company" href = "https://www.chargebee.com/company/" class = "company_features_header">Company<i class="arrow_right arrow_right_4"></i></a>
+                        <br/><br/><a class = "sub_headers" href = "https://www.chargebee.com/customers/">Customers</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/partners/">Partners</a><br/>
+                        <br/><a class = "sub_headers" href = "https://careers.chargebee.com/jobs/">Careers</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/press/">Press</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/company/terms/">Terms</a><br/>
+                        <br/><a class = "sub_headers" href = "https://www.chargebee.com/privacy/">Privacy</a><br/>
+                    </div>
                 </div>
-                <div>social_media_handles</div>
-                <div></div>
+                <div id = "footer">
+                    <a href = "https://www.linkedin.com/company/chargebee"><img src = "./files/iconmonstr-linkedin-3.png" class = "footer_pngs" alt = "linkedIn logo"/></a>
+                    <a href = "https://www.youtube.com/user/ChargeBeeStudio"><img src = "./files/download.png" class = "footer_pngs" alt = "youtube logo"/></a>
+                    <a href = "https://twitter.com/chargebee"><img src = "./files/iconmonstr-twitter-1.png" class = "footer_pngs" alt = "twitter logo"/></a>
+                    <a href = "https://www.facebook.com/chargebee"><img src = "./files/20673.png" class = "footer_pngs" alt = "facebook logo"/></a>              
+                </div>
             </div>
         </div>
         <script src = "learn-more.js"></script>
