--- a/landing_page.html
+++ b/landing_page.html
@@ -6,6 +6,8 @@
         <link rel = "stylesheet" href = "landing_page.css">
         <link rel = "stylesheet" href = "uicons-regular-rounded/css/uicons-regular-rounded.css">
         <link rel = "stylesheet" href = "uicons-solid-rounded/css/uicons-solid-rounded.css">
+        <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
+        href="https://www.chargebee.com/static/resources/brand/favicon.png">
         <title>Subscription Management</title>
     </head>
     <body>
@@ -18,10 +20,10 @@
             <div>Resources</div>
             <div class="login_demo display_flex">
                 <div class="display_flex schedule schedule_orange">
-                    <p class="demo">Schedule a Demo</p>
+                    <p class="demo"><a href="demo.html">Schedule a Demo</a></p>
                     <i class="fi-rr-angle-small-right demo"></i>
                 </div>
-                <div class="display_flex">
+                <div class="display_flex login">
                     <div><i class="fi-sr-lock"></i></div>
                     <div>Login</div>
                     <div><i class="fi-rr-angle-small-right"></i></div>
@@ -35,7 +37,7 @@
             <p>and scale recurring revenue.</p>
             <div class="sch_signup_btn display_flex">
                 <div class="display_flex schedule schedule_purple">
-                    <p>Schedule a Demo</p>
+                    <p><a href="demo.html">Schedule a Demo</a></p>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
                 <div class="display_flex">
@@ -219,7 +221,7 @@
                     <p>Talk to us today about your revenue workflow</p>
                 </div>
                 <div class="display_flex schedule head_sch">
-                    <p>Schedule a Demo</p>
+                    <p><a href="demo.html">Schedule a Demo</a></p>
                     <i class="fi-rr-arrow-small-right"></i>
                 </div>
             </div>
@@ -309,7 +311,7 @@
         <div class="display_flex bottom_head">
             <h5>Still unsure? Step Inside and See What The Future Looks Like.</h5>
             <div class="display_flex schedule head_sch">
-                <p>Schedule a Demo</p>
+                <p><a href="demo.html">Schedule a Demo</a></p>
                 <i class="fi-rr-angle-small-right"></i>
             </div>
         </div>
