--- a/pricing.html
+++ b/pricing.html
@@ -8,8 +8,8 @@
     <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
         href="https://www.chargebee.com/static/resources/brand/favicon.png">
 
-    <link rel="stylesheet" href="D:/pricing Masai/pricing.css">
-    <script src="D:/pricing Masai/pricing.js"></script>
+    <link rel="stylesheet" href="pricing.css">
+    <script src="pricing.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!--font-family: 'Open Sans', sans-serif;-->
