borders removed and texts added, 5 more parts are pending

--- a/learn-more.html
+++ b/learn-more.html
@@ -40,10 +40,41 @@
                     <div></div>
                     <div></div>
                 </div>
-                <div id = "salient_features_with_img">      
+                <div id = "salient_features_with_img">
+                    <div>
+                        <p class = "box_small_head">Checkout and Self-serve Portal</p>
+                        <p class = "box_main_head">Navigate Customers Through
+                            a Stellar Subscription Experience</p>
+                            <p class = "box_writeup">Sign up customers with a secure zero-code checkout that's designed to convert. Let customers 
+                                manage their subscription data themselves with a customizable customer portal.
+                                 What's more — weave the look and feel of your brand consistently across each of these customer-facing elements.</p>
+                                 <a href = "https://www.chargebee.com/recurring-payments/checkout-experience/" class = "box_anchor">Checkout 🡢</a><br/><br/>
+                                 <a class = "box_anchor" href = "https://www.chargebee.com/subscription-management/customer-self-service-portal/">Self-serve Portal  🡢</a>
+                    </div>      
                 </div>
-                <div id = "salient_features_with_img_2"></div>
-                <div id = "subscription_ad"></div>
+                <div id = "salient_features_with_img_2">
+                    <div>
+                        <p class = "box_small_head">Subscription Lifecycle Management</p>
+                        <p class = "box_main_head">Get Visibility into Every Subscriber’s Lifecycle</p>
+                        <p class = "box_writeup">Automate the boring-yet-essential chunk of subscription lifecycle management like nudging 
+                            trial users to the paid plan, collecting payment information, managing upgrade or downgrade 
+                            billing adjustments, and subscription renewals. And save the human touch for things that 
+                            matter.
+                        </p>
+                        <a class = "box_anchor" href = "https://www.chargebee.com/recurring-billing-invoicing/new-email-notifications/">Communicate better with email notifications  🡢</a>
+                        <br/><br/><a  class = "box_anchor" href = "https://www.chargebee.com/subscription-management/handle-prorations/">Simplify billing adjustments with proration 🡢</a>
+                    </div>
+                </div>
+                <div id = "subscription_ad">
+                    <div><p>No matter how you handle subscriptions today, 
+                        Chargebee can fit in with your existing tech stack and exemplify operational efficiency</p>
+                    </div>
+                    <div>
+                        <a class = "box_anchor" href = "https://www.chargebee.com/integrations/salesforce/">Salesforce  🡢</a>
+                        <a class = "box_anchor" href = "https://www.chargebee.com/integrations/xero-recurring-billing/">Xero  🡢</a>
+                        <a class = "box_anchor" href = "https://www.chargebee.com/integrations/">View all integrations  🡢</a>
+                    </div>
+                </div>
                 <div id = "demo_signup">
                     <div><p>Scale your subscription management<br/> in style with Chargebee.</p></div>
                     <button class = "violet_button">Signup for free &#8594</button>
