--- a/landing_page.html
+++ b/landing_page.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="display_flex login">
                     <div><i class="fi-sr-lock"></i></div>
-                    <div>Login</div>
+                    <div><a href="login.html">Login</a></div>
                     <div><i class="fi-rr-angle-small-right"></i></div>
                 </div>
             </div>
